# mix-files

./: .gitignore  README.md  package.json
.github/workflows/: build-python-app.yml  ci.yml  release.yml
python_app/: README.md  mix_files_pyqt.py
scripts/: build-python-macos.sh  build-python-windows.ps1  build_python_app.py
src/: cli.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-ui/: index.html  main.js  styles.css
