[package]
name = "mix-files"
version = "1.5.0"
description = "Shuffle MP3 files into multiple output folders"
edition = "2021"

[lib]
name = "mix_files_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
open = "5"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
thiserror = "2"
